--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "next": "15.3.3",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
