--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Zênon AI",
-  "short_name": "Zênon",
+  "short_name": "Zênon AI",
   "description": "Sua IA especialista em tecnologia e programação",
   "start_url": "/",
   "display": "standalone",
